--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,11 @@
 body{
-    text-align: center;
-    color: purple;
+    border: 1px solid black;
+    border-radius: 5px;
+    color: black;
+}
+.cabecera{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
