--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,11 +1,22 @@
 body{
-    border: 1px solid black;
-    border-radius: 5px;
-    color: black;
-}
-.cabecera{
+    background-color: darkgray;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border: 10px solid black;
+}
+.cabecera{
+    margin: 0;
+    border: 1px solid black;
+    border-radius: 5px;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+}
+div h1,p,h3{
+    margin: 10px 50px;
 }
